--- a/index.html
+++ b/index.html
@@ -10,10 +10,6 @@
     <h1>FILMLƏR</h1>
     <div id="film">
         <p>Hwang ideyanı öz iqtisadi mübarizələrinə, eləcə də Cənubi Koreya və kapitalizmdəki sinfi bərabərsizliyə əsaslanaraq təsəvvür etdi . Hekayəni 2009-cu ildə yazsa da, Hwang xarici proqram təkliflərini genişləndirmək üçün Netflix 2019-cu ildə maraqlanana qədər ideyanı maliyyələşdirəcək prodüser şirkəti tapa bilmədi.</p>
-        <p>Squid Game - nin ilk mövsümü 17 sentyabr 2021-ci ildə bütün dünyada yayımlandı, tənqidi bəyənmə və beynəlxalq diqqətə layiq görüldü. Bu, Netflix-in ən çox baxılan serialı oldu və altı Primetime Emmy Mükafatı və bir Qızıl Qlobus da daxil olmaqla çoxsaylı mükafatlar aldı . İkinci sezonun istehsalı 2023-cü ilin iyulunda başladı və 26 dekabr 2024-cü ildə buraxıldı. Üçüncü və son mövsüm ikinci sezonla arxa-arxaya çəkildi və 27 iyun 2025-ci ildə buraxılması planlaşdırılır.</p>
-        <p>45,6 milyard ₩ dəyərində mükafat qazanmaq şansı üçün hər biri dərin maddi sıxıntı içində olan 456 oyunçunun bir sıra ölümcül uşaq oyunlarını oynamaq üçün həyatlarını riskə atdığı gizli bir yarışma ətrafında cərəyan edir. Serialın adıKoreya uşaq oyunu olan ojingeodan götürülür. Serialın baş qəhrəmanı Seong Gi-hun obrazını canlandıran Li Jung-jae ansambl heyətinə rəhbərlik edir.</p>
-        <img src="./indir.jpg" alt="">
-        <a href="https://en.wikipedia.org/wiki/Squid_Game">Squid Game</a>
-    </div>
+        <p>Squid G
 </body>
 </html>
