--- a/index.html
+++ b/index.html
@@ -7,9 +7,29 @@
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-    <h1>FILMLƏR</h1>
-    <div id="film">
-        <p>Hwang ideyanı öz iqtisadi mübarizələrinə, eləcə də Cənubi Koreya və kapitalizmdəki sinfi bərabərsizliyə əsaslanaraq təsəvvür etdi . Hekayəni 2009-cu ildə yazsa da, Hwang xarici proqram təkliflərini genişləndirmək üçün Netflix 2019-cu ildə maraqlanana qədər ideyanı maliyyələşdirəcək prodüser şirkəti tapa bilmədi.</p>
-        <p>Squid G
+    <h1>CineFilmlər</h1>
+    <p>Home</p>
+    <p>Category</p>
+    <p>LİVE</p>
+<img src="Squid Game.jpg" alt="squid game" id="squid">
+
+
+
+<div id="birinci">
+    <img src="download (2).jpeg" alt="film">
+    <img src="download (1).jpeg" alt="film">
+    <img src="download (10).jpeg" alt="film">
+    <img src="download (11).jpeg" alt="film">
+    <img src="download (12).jpeg" alt="film">
+    <img src="download (13).jpeg" alt="film">
+    <img src="download (3).jpeg" alt="film">
+    <img src="download (4).jpeg" alt="film">
+    <img src="download (5).jpeg" alt="film">
+    <img src="download (6).jpeg" alt="film">
+    <img src="download (9).jpeg" alt="film">
+    <img src="download (7).jpeg" alt="film">
+    <img src="download.jpeg" alt="film">
+    
+</div>
 </body>
 </html>
